--- a/_config.yml
+++ b/_config.yml
@@ -19,3 +19,11 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
+
+# Compress HTML settings
+# http://jch.penibelst.de/
+compress_html:
+  clippings: all
+  comments:  all
+  endings:   all
+  profile: false
