--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,12 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: dansmith65
+github_username:  dansmith65
+safe: true
+timezone: America/Phoenix
+exclude:
+  - README.md
 
 # Build settings
 markdown: kramdown
@@ -31,4 +35,16 @@ compress_html:
 # Compress CSS
 # https://jekyllrb.com/docs/assets/
 sass:
-    style: compressed
+  style: compressed
+
+# Front Matter defaults
+# https://jekyllrb.com/docs/configuration/#front-matter-defaults
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      permalink: "/blog/:year/:month/:title/"
+      layout: post
+      author: Daniel Smith
