exclude files not needed in the generated site

--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,10 @@ safe: true
 timezone: America/Phoenix
 exclude:
   - README.md
+  - CNAME
+  - Gemfile
+  - Gemfile.lock
+  - LICENSE
 
 # Build settings
 markdown: kramdown
